[gd_scene load_steps=3 format=3 uid="uid://dxgko0bcehgd6"]

[ext_resource type="Script" path="res://PlayerInteractionController/PlayerInteractionController.gd" id="1_ethe1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_itsu1"]
bg_color = Color(0, 0, 0, 1)
skew = Vector2(0.25, 0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1
expand_margin_left = 12.0
expand_margin_top = 4.0
expand_margin_right = 12.0
expand_margin_bottom = 4.0
anti_aliasing = false

[node name="PlayerInteractionController" type="Node3D"]
script = ExtResource("1_ethe1")
metadata/_edit_horizontal_guides_ = [-1.0]

[node name="Messages" type="VBoxContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -109.0
offset_top = 386.0
offset_right = 109.0
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 6
alignment = 1

[node name="InfoMessage" type="Label" parent="Messages"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="DescriptionMessage" type="Label" parent="Messages"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_itsu1")
horizontal_alignment = 1

[node name="SubMessage" type="Label" parent="Messages"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 2
